// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GnoVault deposit deposit 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 82635,
}
`;

exports[`GnoVault pulls withdrawals on claim exited assets 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 95787,
}
`;

exports[`GnoVault swap xdai to gno can swap all xdai to gno 1`] = `
Object {
  "calldataByteLength": 4,
  "gasUsed": 132781,
}
`;

exports[`GnoVault swap xdai to gno skips swapping when balance less than 1 gwei xdai 1`] = `
Object {
  "calldataByteLength": 4,
  "gasUsed": 29206,
}
`;
